Fix feed title spacing

--- a/style.css
+++ b/style.css
@@ -73,6 +73,8 @@ header .logo {
 }
 
 .postFeed h1 {
+    margin: 0;
+
     text-align: center;
     text-transform: uppercase;
 
